@@ -6,6 +6,7 @@
 #include "ttHMultilepton/CountHisto.h"
 #include "ttHMultilepton/DuplicateSelector.h"
 #include "ttHMultilepton/NLeptonSelector.h"
+#include "ttHMultilepton/NLeptonPlusTauSelector.h"
 
 /*** This is where the magic happens.  When top-xaod comes across a cut in the configuration file it tries to load it.
  * So if it comes across the word "EVEN" it'll make and return a new EvenNumberSelector object (which
@@ -35,6 +36,8 @@ top::EventSelectorBase* ttHMultileptonLoader::initTool(const std::string& name, 
     return new DuplicateSelector();
   else if (line.find("NLEPTON") == 0)
     return new NLeptonSelector(param);
+  else if (line.find("NLEPTONPLUSTAU") == 0)
+    return new NLeptonPlusTauSelector(param);
   //else if (line.find("OTHER_TOOL") == 0)
   //  return new OtherToolThatYouInvented();
   
