@@ -91,7 +91,7 @@ SELECTION loose
 INITIAL
 COUNTHISTO
 PRIVTX
-NLEPTON 10000 >= 2
+NLEPTONPLUSTAU 10000 >= 2
 JETCLEAN LooseBad
 #TRIGDEC HLT_mu26_imedium
 #TRIGMATCH HLT_mu26_imedium
